visibility fix i want to sleep

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,10 +89,10 @@ a:hover {
 
 .social-media {
   display: inline-block;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-family: 'Courier New', Courier, monospace;
   margin-bottom: 1.5rem;
-  margin-top: 3rem;
+  margin-top: 0.7rem;
   margin-right: 10rem;
   padding: 0.7rem;
   border-radius: 1.5rem;
